<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <fragment
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="384dp"
        android:layout_height="692dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".fragments.MapsFragment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_location_popup"
        android:layout_width="318dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            style="@style/generalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cofirm_location"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/continueBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/continueBtn"
            style="@style/buttonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/continue_"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scorePopup"
        android:layout_width="349dp"
        android:layout_height="186dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/namePlace"
            style="@style/generalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingPlace"
            android:layout_width="230dp"
            android:layout_height="43dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/confimScoreBtn"
            app:layout_constraintEnd_toStartOf="@+id/imagePlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeAdd" />

        <TextView
            android:id="@+id/placeAdd"
            style="@style/generalText"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePlace" />

        <ImageView
            android:id="@+id/imagePlace"
            android:layout_width="85dp"
            android:layout_height="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/confimScoreBtn"
            style="@style/buttonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117dp"
            android:layout_marginEnd="49dp"
            android:text="@string/scoreBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imagePlace"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>